<resources>
    <string name="ExoPlayer">ExoPlayer</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abi_mismatch">Preferred native ABI precedence of this device (%1$s) and ABI reported by native libraries (%2$s) mismatch</string>
    <string name="account_expired">Account! Your Account has been expired. Please contact Support.</string>
    <string name="account_is_not_setup">Account is not setup. Please update username and password.</string>
    <string name="add">Add</string>
    <string name="add_new_vpn_hint">Use the &lt;img src=\"ic_menu_add\"/> icon to add a new VPN</string>
    <string name="add_profile">add Profile</string>
    <string name="add_profile_name_prompt">Enter a name identifying the new Profile</string>
    <string name="add_remote">Add new remote</string>
    <string name="address">Server Address:</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="after_clearing_the_cache_the_app_will_restart">After clearing the cache, the app will restart.</string>
    <string name="all_app_prompt">An external app tries to control %s. The app requesting access cannot be determined. Allowing this app grants ALL apps access.</string>
    <string name="allow_vpn_changes">Allow changes to VPN Profiles</string>
    <string name="allowed_apps">Allowed apps: %s</string>
    <string name="allowed_vpn_apps_info">Allowed VPN apps: %1$s</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">PlayTV Pro</string>
    <string name="app_no_longer_exists">Package %s is no longer installed, removing it from app allow/disallow list</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbehaviour">Application behaviour</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="as_servername">AS servername</string>
    <string name="auth_dialog_message">Enter the authentication digest used for OpenVPN. Leave empty to use default digest.</string>
    <string name="auth_dialog_title">Enter packet authentication method</string>
    <string name="auth_failed_behaviour">Behaviour on AUTH_FAILED</string>
    <string name="auth_pwquery">Password</string>
    <string name="auth_username">Username</string>
    <string name="auto_start_app_after_reboot">Auto Start App After Reboot</string>
    <string name="back_button_text">Go back</string>
    <string name="background_service_update_contents">Background Contents Update</string>
    <string name="background_update_process_is_running">Background Update Process is running!</string>
    <string name="backup_completed">Backup Completed</string>
    <string name="backup_completed_restore_running">Backup has been downloaded successfully. Please wait restore process running.</string>
    <string name="backup_dns">Backup DNS Server</string>
    <string name="backup_or_restore_app_settings">Backup or Restore App Settings</string>
    <string name="backup_restore">Backup and Restore</string>
    <string name="battery_consumption_title">Battery consumption</string>
    <string name="bits_per_second">%.0f bit/s</string>
    <string name="blocklocal_summary">Networks directly connected to the local interfaces will not be routed over the VPN. Deselecting this option will redirect all traffic intented for local networks to the VPN.</string>
    <string name="blocklocal_title">Bypass VPN for local networks</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="broken_image_cert">Got an exception trying to show the Android 4.0+ certificate selection dialog. This should never happen as this a standard feature of Android 4.0+. Maybe your Android ROM support for certificate storage is broken</string>
    <string name="broken_image_cert_title">Error showing certificate selection</string>
    <string name="broken_images">Broken Images</string>
    <string name="broken_images_faq">Official HTC images are known to have a strange routing problem causing traffic not to flow through the tunnel</string>
    <string name="build_libvlc_revision">2504888</string>
    <string name="build_vlc_revision">bdfc7bc92e</string>
    <string name="building_configration">Building configuration…</string>
    <string name="built_by">built by %s</string>
    <string name="ca_title">CA Certificate</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_connection">Disconnect</string>
    <string name="cancel_connection_long">Disconnect VPN</string>
    <string name="cancel_connection_query">Disconnect the connected VPN/cancel the connection attempt?</string>
    <string name="cannotparsecert">Cannot display certificate information</string>
    <string name="cant_read_folder">Unable to read directory</string>
    <string name="card_content_descriptor">card</string>
    <string name="channel_description_background">Ongoing statistics of the established OpenVPN connection</string>
    <string name="channel_description_status">Status changes of the OpenVPN connection (Connecting, authenticating,…)</string>
    <string name="channel_description_userreq">OpenVPN connection requires a user input, e.g. two factor authentification</string>
    <string name="channel_name_background">Connection statistics</string>
    <string name="channel_name_status">Connection status change</string>
    <string name="channel_name_userreq">User interaction required</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_remote_tlscert">Checks whether the server uses a certificate with TLS Server extensions (--remote-cert-tls server)</string>
    <string name="check_remote_tlscert_title">Expect TLS server certificate</string>
    <string name="chipher_dialog_message">Enter the encryption cipher algorithm used by OpenVPN. Leave empty to use default cipher.</string>
    <string name="cipher_dialog_title">Enter encryption method</string>
    <string name="clear">Clear</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_external_apps">Clear allowed external apps</string>
    <string name="clear_log">clear log</string>
    <string name="clear_log_on_connect">Clear log on new connection</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clearappsdialog">"Clear list of allowed external apps?
Current list of allowed apps:

%s"</string>
    <string name="client_behaviour">Client behaviour</string>
    <string name="client_certificate_title">Client Certificate</string>
    <string name="client_key_title">Client Certificate Key</string>
    <string name="client_no_certificate">No Certificate</string>
    <string name="client_pkcs12_title">PKCS12 File</string>
    <string name="cloud_backup">Cloud Backup</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="complete_dn">Complete DN</string>
    <string name="config_error_found">Error in Configuration</string>
    <string name="configuration_changed">Configuration changed</string>
    <string name="configure">Configure</string>
    <string name="configure_the_vpn">Configure the VPN</string>
    <string name="connect_timeout">Connect Timeout</string>
    <string name="connection_retries">Connection retries</string>
    <string name="connectretrymaxmessage">Enter the maximum time between connection attempts. OpenVPN will slowly raise its waiting time after an unsuccessful connection attempt up to this value. Defaults to 300s.</string>
    <string name="connectretrymaxtitle">Maximum time between connection attempts</string>
    <string name="connectretrymessage">Number of seconds to wait between connection attempts.</string>
    <string name="connectretrywait">Seconds between connections</string>
    <string name="sign_up">Sign Up</string>
    <string name="xc_password">Password</string>
    <string name="xc_sign_in">Sign In</string>
    <string name="xc_username">Username</string>
</resources>