<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/orplayer_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center" android:id="@id/img_bg" android:background="@drawable/corner_shadow" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <bx.BXbg android:layout_gravity="center" android:background="@drawable/corner_shadow" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitXY" android:contentDescription="@string/app_name" android:layerType="software" />
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="350.0dip" android:layout_height="wrap_content">
        <bx.BXlogo android:layout_gravity="center|top" android:id="@id/img_login_logo" android:visibility="gone" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginBottom="10.0dip" android:scaleType="fitXY" android:drawable="@color/xciptv_transparent" android:alpha="0.99" />
        <FrameLayout android:id="@id/layout_mac_activation" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="18.0sp" android:textColor="@color/orplayer_litegray_font_color" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" android:text="Your Device is not Active" android:fontFamily="@font/quicksand_medium" />
                <TextView android:textSize="20.0sp" android:textColor="@color/orplayer_skyblue_font_color" android:gravity="center" android:id="@id/txt_mac_address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" android:text="MAC: 00:00:00:00:00:00" android:fontFamily="@font/quicksand_medium" />
                <TextView android:textColor="#ffeee8e8" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" android:text="Please contact support" android:fontFamily="@font/quicksand_regular" />
                <TextView android:textSize="18.0sp" android:textColor="#ffeee8e8" android:gravity="center" android:id="@id/txt_support_line1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" android:text="support@yourdomain.com" android:fontFamily="@font/quicksand_regular" />
                <TextView android:textSize="18.0sp" android:textColor="#ffeee8e8" android:gravity="center" android:id="@id/txt_support_line2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" android:text="1 (000) 000-0000" android:fontFamily="@font/quicksand_regular" />
            </LinearLayout>
        </FrameLayout>
        <TextView android:visibility="gone" android:textColor="#ffeee8e8" android:gravity="center" android:id="@id/txt_panel_selected_desc" android:background="@drawable/btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" android:text="XTREAM CODES COMPATIBLE API" android:fontFamily="@font/quicksand_light" />
        <FrameLayout android:id="@id/layout_portal_url" android:background="#ffffffff" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="5.0dip">
            <EditText android:textColor="@color/cardview_dark_background" android:textColorHint="#ff6a6a6a" android:id="@id/ed_server" android:background="@drawable/xciptv_ed" android:paddingLeft="60.0dip" android:nextFocusDown="@id/ed_username" android:layout_width="fill_parent" android:layout_height="50.0dip" android:hint="https or http://server:port" android:inputType="textPersonName" android:fontFamily="@font/quicksand_regular" />
            <ImageView android:id="@id/img_server_logo" android:background="@drawable/server_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="12.0dip" />
        </FrameLayout>
        <com.bx.xc7914.VisionusHiddenLayout android:id="@id/layout_username_holder" android:visibility="gone" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="5.0dip">
            <EditText android:textColor="@color/cardview_dark_background" android:textColorHint="#ff6a6a6a" android:id="@id/ed_username" android:background="@drawable/xciptv_ed" android:paddingLeft="60.0dip" android:focusable="true" android:nextFocusDown="@id/ed_password" android:layout_width="fill_parent" android:layout_height="50.0dip" android:hint="@string/xc_username" android:ems="10" android:inputType="textFilter|textPostalAddress|textWebEmailAddress|textWebPassword|textNoSuggestions" android:fontFamily="@font/quicksand_regular" />
            <ImageView android:id="@id/imageView19" android:background="@drawable/username_icon" android:paddingLeft="0.0dip" android:focusable="false" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" />
        </com.bx.xc7914.VisionusHiddenLayout>
        <com.bx.xc7914.VisionusHiddenLayout android:id="@id/layout_password_holder" android:visibility="gone" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <EditText android:textColor="@color/cardview_dark_background" android:textColorHint="#ff6a6a6a" android:id="@id/ed_password" android:background="@drawable/xciptv_ed" android:paddingLeft="60.0dip" android:focusable="true" android:nextFocusLeft="@id/btn_login" android:nextFocusRight="@id/btn_show_password" android:nextFocusDown="@id/btn_login" android:layout_width="fill_parent" android:layout_height="50.0dip" android:hint="@string/xc_password" android:ems="10" android:password="true" android:inputType="textNoSuggestions|textPassword" android:nextFocusForward="@id/btn_login" android:fontFamily="@font/quicksand_regular" />
            <ImageView android:id="@id/imageView20" android:background="@drawable/password_icon" android:focusable="false" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" />
            <ImageButton android:layout_gravity="center|right" android:id="@id/btn_show_password" android:background="@drawable/show_pass" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginRight="5.0dip" />
        </com.bx.xc7914.VisionusHiddenLayout>
        <LinearLayout android:visibility="gone" android:orientation="horizontal" android:focusable="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Button android:textSize="20.0sp" android:id="@id/btn_login" android:background="@drawable/btn" android:nextFocusLeft="@id/btn_select_panel" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:text="@string/xc_sign_in" android:fontFamily="@font/quicksand_medium" />
        </LinearLayout>
        <Button android:visibility="gone" android:textSize="20.0sp" android:id="@id/btn_signup" android:background="@drawable/btn" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="5.0dip" android:text="@string/sign_up" android:fontFamily="@font/quicksand_medium" />
    </LinearLayout>
    <Button android:textSize="20.0sp" android:layout_gravity="bottom|center|right" android:id="@id/btn_select_panel" android:background="@color/xciptv_transparent" android:focusable="false" android:focusableInTouchMode="false" android:visibility="gone" android:clickable="false" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip" />
    <Button android:textSize="20.0sp" android:layout_gravity="bottom|center|right" android:id="@id/dnsmenu" android:background="@drawable/cat_service" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip" android:onClick="showdialog" />
    <LinearLayout android:layout_gravity="top|center_horizontal" android:orientation="horizontal" android:background="#CC0B1220" android:padding="8.0dip" android:clickable="false" android:focusable="false" android:elevation="8.0dip" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
        <ImageView android:layout_gravity="center_vertical" android:src="@drawable/logo2" android:layout_width="42.0dip" android:layout_height="42.0dip" android:layout_marginRight="8.0dip" android:contentDescription="Visionus" />
        <LinearLayout android:orientation="vertical" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:text="Visionus" android:fontFamily="sans" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="12.0sp" android:textColor="#ffb8c7e8" android:text="Acesso pelo ID do aparelho" android:fontFamily="sans" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>